--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 .container{
-    width: 80%;
+    width: 50%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(63, 77, 91);
 }
+.subcontainer{
+    margin: 0 auto;
+    width: 80%;
+}
+
 .fa-solid{
     width: 100px;
     height: 100px;
@@ -18,6 +26,7 @@
     font-weight: bolder;
     font-size: 70px;
     text-align: center;
+    margin: 0 auto;
 }
 .heading h5{
     color: #fff;
@@ -26,10 +35,12 @@
 .yellow1a{
     background-color: rgb(228, 179, 3);
     color: #fff;
+    text-align: center;
 }
 .blue1b{
     background-color: rgb(90, 182, 240);
     color: #fff;
+    text-align: center;
 }
 .red2{
     background-color: rgb(217, 58, 58);
