--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@
     font-size: 35px;
     text-align: center;
 }
+.row1_s1{    font-size: 45px;}
+.obese { font-size: 30px ;}
 .yellow1a{
     background-color: rgb(228, 179, 3);
     color: #fff;
