--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@
     margin: 0 auto;
     width: 80%;
 }
-
 .fa-children{
     position: relative;
+    padding-left: 12px ;
+    padding-top: 15px;
     top:110px;
     left: 55px;
     width: 90px;
@@ -26,10 +27,7 @@
     outline-style: solid;
     outline-color:white ;
     outline-width: 5px;
-    /* transform: translate(-25%, -20%); */
 }
- 
-
 .heading h1{
     color: rgb(234, 97, 97);
     font-weight: bolder;
@@ -45,17 +43,14 @@
     font-size: 35px;
     text-align: center;
 }
-
 .yellow1a,.yellow6,.yellow4b{
     background-color: rgb(228, 179, 3);
     color: #fff;
 }
-
 .blue1b,.blue3,.blue5,.blue7a{
     background-color: rgb(90, 182, 240);
     color: #fff; 
 }
-
 .red2,.red4a,.red7b{
     background-color: rgb(217, 58, 58);
     color: #fff;
