--- a/style.css
+++ b/style.css
@@ -14,10 +14,8 @@
 }
 .fa-children{
     position: relative;
-    padding-left: 12px ;
+    padding-right: 12px ;
     padding-top: 15px;
-    top:110px;
-    left: 55px;
     width: 90px;
     height: 90px;
     font-size: 50px;
