--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 
 
+
+ul{
+    display: block;
+}
+
+li{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+
 .container{
     width: 50%;
     height: 100%;
@@ -27,16 +42,10 @@
     outline-width: 5px;
 }
 .heading h1{
-    color: rgb(234, 97, 97);
     font-weight: bolder;
     font-size: 70px;
-    text-align: center;
-    margin: 0 auto;
 }
-.heading h5{
-    color: #fff;
-    text-align: center;
-}
+
 .fa-child{
     font-size: 35px;
     text-align: center;
